# morethemes

./: .coverage  .gitignore  .pre-commit-config.yaml  404.html  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  README.qmd  index.html  index.qmd  justfile  mkdocs.yml  pyproject.toml  setup.py  sitemap.xml
.github/.workflows/: unit-test.yaml
.github/workflows/: ci.yml  lint.yaml  tests.yaml  unit-test.yaml
contributing/: index.html
docs/: README.qmd  contributing.md  create-a-theme.md  gallery.md  index.md  index.qmd
docs/guide/: create-your-theme.md  custom-a-theme.md  quick-start.md  reference.md
docs/scripts/: make.py
guide/create-your-theme/: index.html
guide/custom-a-theme/: index.html
guide/reference/: index.html
img/: make.py
morethemes/: __init__.py  fonts.py  main.py  preview.py  themes.py
morethemes/fonts/: LICENSE
morethemes/fonts/LICENSES/: OFL.txt
morethemes/themes/: __init__.py  darker.py  lighter.py
overrides/partials/: footer.html
scripts/: coverage.sh
stylesheets/: style.css
tests/: test_main.py
