[project]
name = "morethemes"
version = "0.3.2"
description = "More themes for matplotlib"
license-files = [
    "LICENSE",
    "morethemes/fonts/LICENSE",
    "morethemes/fonts/LICENSES/OFL.txt",
    "morethemes/fonts/LICENSES/Apache.txt"
]
keywords = ["matplotlib", "themes", "style"]
authors = [
  { name="Joseph Barbier", email="joseph.barbierdarnal@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Framework :: Matplotlib"
]

dependencies = [
    "matplotlib>=3.6.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "pre-commit>=4.0.1",
    "setuptools>=75.8.0",
    "mkdocs-material>=9.5.49",
    "mkdocs-matplotlib>=0.10.1",
]
quarto = [
    "jupyter>=1.1.1",
    "nbclient>=0.10.2",
    "nbformat>=5.10.4",
]

[build-system]
requires = [
    "setuptools",
    "setuptools-scm",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["morethemes"]
include-package-data = true

[tool.uv.sources]
morethemes = { workspace = true }

[project.urls]
Homepage = "https://JosephBARBIERDARNAL.github.io/morethemes/"
Issues = "https://github.com/JosephBARBIERDARNAL/morethemes/issues"
Documentation = "https://JosephBARBIERDARNAL.github.io/morethemes/"
Repository = "https://github.com/JosephBARBIERDARNAL/morethemes"
