[project]
name = "morethemes"
version = "0.5.0"
description = "More themes for matplotlib"
license = "MIT"
license-files = ["LICENSE"]
keywords = ["matplotlib", "themes", "style", "colors"]
authors = [
  { name="Joseph Barbier", email="joseph.barbierdarnal@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Framework :: Matplotlib"
]

dependencies = [
    "matplotlib>=3.6.0",
    "pyfonts>=1.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "pre-commit>=4.0.1",
    "setuptools>=75.8.0",
    "mkdocs-material>=9.5.49",
    "mkdocs-matplotlib>=0.10.1",
    "coverage>=7.9.1",
    "genbadge>=1.1.2",
    "defusedxml>=0.7.1",
]
quarto = [
    "jupyter>=1.1.1",
    "nbclient>=0.10.2",
    "nbformat>=5.10.4",
]

[build-system]
requires = [
    "setuptools",
    "setuptools-scm",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["morethemes"]

[tool.uv.sources]
morethemes = { workspace = true }

[project.urls]
Homepage = "https://y-sunflower.github.io/morethemes/"
Issues = "https://github.com/y-sunflower/morethemes/issues"
Documentation = "https://y-sunflower.github.io/morethemes/"
Repository = "https://github.com/y-sunflower/morethemes"
