[project]
name = "morethemes"
version = "0.5.1"
description = "More themes for matplotlib"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "Joseph Barbier", email = "joseph.barbierdarnal@gmail.com" },
]
keywords = ["colors", "matplotlib", "style", "themes"]
classifiers = [
  "Framework :: Matplotlib",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3"
]

dependencies = [
  "matplotlib>=3.6.0",
  "pyfonts>=1.0.0",
]

[project.urls]
Documentation = "https://y-sunflower.github.io/morethemes/"
Homepage = "https://y-sunflower.github.io/morethemes/"
Issues = "https://github.com/y-sunflower/morethemes/issues"
Repository = "https://github.com/y-sunflower/morethemes"

[dependency-groups]
dev = [
  "coverage>=7.9.1",
  "defusedxml>=0.7.1",
  "genbadge>=1.1.2",
  "mkdocs-material>=9.5.49",
  "mkdocs-matplotlib>=0.10.1",
  "pre-commit>=4.0.1",
  "pytest>=8.3.4",
  "setuptools>=75.8.0",
]
quarto = [
  "jupyter>=1.1.1",
  "nbclient>=0.10.2",
  "nbformat>=5.10.4",
]

[build-system]
requires = [
  "setuptools",
  "setuptools-scm",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["morethemes"]

[tool.uv.sources]
morethemes = { workspace = true }
